Fixed dialogs horizontal alignment in mobile mode

--- a/web-client/src/main/webapp/static/css/gwt/form/components/base/resizable-window.css
+++ b/web-client/src/main/webapp/static/css/gwt/form/components/base/resizable-window.css
@@ -9,4 +9,6 @@
 .modal-dialog.modal-fit-content {
     max-width: none;
     width: fit-content;
+    margin-right: auto;
+    margin-left: auto;
 }
